--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "marked": "^4.0.9",
     "mini-css-extract-plugin": "^2.4.6",
+    "prettier": "^2.5.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.2"
