--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
+    "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
+    "core-js": "^3.20.2",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
     "marked": "^4.0.9",
